--- a/bottler/templates/bottler/base.html
+++ b/bottler/templates/bottler/base.html
@@ -5,7 +5,7 @@
     {% load static %}
     {% load bootstrap4 %}
     {% bootstrap_css %}
-    <link rel="stylesheet" type="text/css" href="{% static 'bottler/css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     {% bootstrap_javascript jquery='full' %}
     <title>ボトラーAI | {% block title %}{% endblock %}</title>
 </head>
