--- a/bottler/templates/bottler/base.html
+++ b/bottler/templates/bottler/base.html
@@ -6,6 +6,7 @@
     {% load bootstrap4 %}
     {% bootstrap_css %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/maromaro.css' %}">
     {% bootstrap_javascript jquery='full' %}
     <title>ボトラーAI | {% block title %}{% endblock %}</title>
 </head>
