--- a/bottler/templates/bottler/index.html
+++ b/bottler/templates/bottler/index.html
@@ -3,11 +3,12 @@
 
 {% block content %}
 <div>
-    <h4 class="mt-4 mb-5 border_bottom">ボトル欠損判定</h4>
-    <p>画像を選択</p>
+    <h3 class="mt-4 mb-5 border_bottom">AIメーカー</h3>
+
     <form action="{% url 'bottler:predict' %}" method="post" class="form" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
+            <p>画像を選択</p>
             <div class="custom-file">
                 {{ form.image }}
                 <label class="custom-file-label" for="customFile">
@@ -17,11 +18,27 @@
         </div>
         <button type="submit" class="btn btn-primary">推定する</button>
     </form>
-    <h4 class="mt-4 mb-5 border_bottom">IBM Visual Recognition</h4>
-    <p>画像を選択</p>
+
+    <table class="table mg-top20">
+            <thead class="thead-lignt">
+              <tr><th>Name</th><th>Link</th></tr>
+            </thead>
+            <tr><td>詳細</td><td><a href="https://aimaker.io/image/classification/detail/id/3673">リンク</a></td></tr>
+          </table>
+    
+
+    <!-- -------------------- -->
+
+    <h3 class="mt-4 mb-5 border_bottom">
+        IBM Visual Recognition
+        
+    </h3>
+    
+
     <form action="{% url 'bottler:recog' %}" method="post" class="form" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
+            <p>画像を選択</p>
             <div class="custom-file">
                 {{ form.image }}
                 <label class="custom-file-label" for="customFile">
@@ -29,7 +46,23 @@
                 </label>
             </div>
         </div>
+        <div class="form-group">
+            <p>モデルを選択</p>
+
+            <select id="model" name="model" class="form-control">
+                <option value='1'>瓶判定</option>
+                <option value='0'>default</option>
+            </select>
+
+        </div>
         <button type="submit" class="btn btn-primary">推定する</button>
     </form>
+
+    <table class="table mg-top20">
+            <thead class="thead-lignt">
+              <tr><th>Name</th><th>Link</th></tr>
+            </thead>
+            <tr><td>詳細</td><td><a href="https://cloud.ibm.com/services/watson-vision-combined/crn:v1:bluemix:public:watson-vision-combined:us-south:a%2f342b4ac190994fcc9c24311e68137d67:406f51eb-c348-4769-a8c7-94339c524be2::">リンク</a></td></tr>
+          </table>
 </div>
 {% endblock %}
