--- a/bottler/templates/bottler/index.html
+++ b/bottler/templates/bottler/index.html
@@ -8,7 +8,7 @@
     <form action="{% url 'bottler:predict' %}" method="post" class="form" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
-            <p>画像を選択テスト</p>
+            <p>画像を選択</p>
             <div class="custom-file">
                 {{ form.image }}
                 <label class="custom-file-label" for="customFile">
